--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,17 @@
-automationhat==0.2.0
-blinker==1.3
-blinkt==0.1.2
-buttonshim==0.0.2
-Cap1xxx==0.1.3
-chardet==2.3.0
-click==6.6
-colorama==0.3.7
-colorzero==1.1
-cryptography==1.7.1
-drumhat==0.1.0
-envirophat==1.0.0
-ExplorerHAT==0.4.2
-Flask==1.0
-fourletterphat==0.1.0
-gpiozero==1.5.0
-idna==2.2
-itsdangerous==0.24
-Jinja2==2.8
-keyring==10.1
-keyrings.alt==1.3
-MarkupSafe==0.23
-mote==0.0.4
-motephat==0.0.2
-oauthlib==2.0.1
-pantilthat==0.0.7
-phatbeat==0.1.1
-pianohat==0.1.0
-picraft==1.0
-piglow==1.2.5
-pigpio==1.38
-pyasn1==0.1.9
-pycrypto==2.6.1
-pygobject==3.22.0
-pyinotify==0.9.6
-PyJWT==1.4.2
-pyOpenSSL==17.5.0
-pyserial==3.2.1
-python-apt==1.1.0b5
-pyxdg==0.26
-rainbowhat==0.1.0
-requests==2.20.0
-requests-oauthlib==0.7.0
-RPi.GPIO==0.6.5
-scrollphat==0.0.7
-SecretStorage==2.3.1
-simplejson==3.10.0
-six==1.12.0
-skywriter==0.0.7
-sn3218==1.2.7
-spidev==3.3
-ssh-import-id==5.6
-touchphat==0.0.1
-twython==3.4.0
-urllib3==1.24.2
-Werkzeug==0.15.3
+click==7.1.1
+cycler==0.10.0
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.1
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.0.3
+numpy==1.18.2
+pigpio==1.46
+pkg-resources==0.0.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+RPi.GPIO==0.7.0
+six==1.14.0
+urllib3==1.25.9
+Werkzeug==1.0.1
